Tests/CompilerTests/negative/cyclic-binding.hylo
//! no-std

fun main() {
  let y = y
}
